// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Elements|TileInput Checkbox 1`] = `
<div
  className="css-m9xbk1"
>
  <div
    className="css-14poqco-Form"
  >
    <fieldset
      className="css-hh72o5-Fieldset"
    >
      <legend
        className="css-fodz0p-Fieldset"
      >
        Example tiles
      </legend>
      <div
        className="css-qzrkkg"
      >
        <div
          className="css-10auc9b"
          l={0.5}
          m={0.5}
          s={0.5}
        >
          <label>
            <input
              checked={false}
              className="css-homqlj-TileInput"
              name="example"
              onChange={[Function]}
              type="checkbox"
              value="a"
            />
            <span
              className="css-alzmg1-TileInput"
            >
              <span
                className="css-3s09t2-TileInput"
              >
                <span />
                <span
                  className="css-1dvl16g-TileInput"
                >
                  🙈
                </span>
                A
              </span>
            </span>
          </label>
        </div>
        <div
          className="css-10auc9b"
          l={0.5}
          m={0.5}
          s={0.5}
        >
          <label>
            <input
              checked={true}
              className="css-homqlj-TileInput"
              name="example"
              onChange={[Function]}
              type="checkbox"
              value="b"
            />
            <span
              className="css-alzmg1-TileInput"
            >
              <span
                className="css-3s09t2-TileInput"
              >
                <span />
                <span
                  className="css-1dvl16g-TileInput"
                >
                  🙉
                </span>
                B
              </span>
            </span>
          </label>
        </div>
        <div
          className="css-10auc9b"
          l={0.5}
          m={0.5}
          s={0.5}
        >
          <label>
            <input
              checked={false}
              className="css-homqlj-TileInput"
              name="example"
              onChange={[Function]}
              type="checkbox"
              value="c"
            />
            <span
              className="css-alzmg1-TileInput"
            >
              <span
                className="css-3s09t2-TileInput"
              >
                <span />
                <span
                  className="css-1dvl16g-TileInput"
                >
                  🙈
                </span>
                C
              </span>
            </span>
          </label>
        </div>
        <div
          className="css-10auc9b"
          l={0.5}
          m={0.5}
          s={0.5}
        >
          <label>
            <input
              checked={false}
              className="css-homqlj-TileInput"
              name="example"
              onChange={[Function]}
              type="checkbox"
              value="d"
            />
            <span
              className="css-alzmg1-TileInput"
            >
              <span
                className="css-3s09t2-TileInput"
              >
                <span />
                <span
                  className="css-1dvl16g-TileInput"
                >
                  🙈
                </span>
                D
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots Elements|TileInput Checkbox Selected 1`] = `
<div
  className="css-m9xbk1"
>
  <div
    className="css-14poqco-Form"
  >
    <fieldset
      className="css-hh72o5-Fieldset"
    >
      <legend
        className="css-fodz0p-Fieldset"
      >
        Example tiles
      </legend>
      <div
        className="css-qzrkkg"
      >
        <div
          className="css-10auc9b"
          l={0.5}
          m={0.5}
          s={0.5}
        >
          <label>
            <input
              checked={false}
              className="css-homqlj-TileInput"
              name="example"
              onChange={[Function]}
              type="checkbox"
              value="a"
            />
            <span
              className="css-alzmg1-TileInput"
            >
              <span
                className="css-3s09t2-TileInput"
              >
                <span />
                <span
                  className="css-1dvl16g-TileInput"
                >
                  🙈
                </span>
                A
              </span>
            </span>
          </label>
        </div>
        <div
          className="css-10auc9b"
          l={0.5}
          m={0.5}
          s={0.5}
        >
          <label>
            <input
              checked={true}
              className="css-homqlj-TileInput"
              name="example"
              onChange={[Function]}
              type="checkbox"
              value="b"
            />
            <span
              className="css-alzmg1-TileInput"
            >
              <span
                className="css-3s09t2-TileInput"
              >
                <span />
                <span
                  className="css-1dvl16g-TileInput"
                >
                  🙉
                </span>
                B
              </span>
            </span>
          </label>
        </div>
        <div
          className="css-10auc9b"
          l={0.5}
          m={0.5}
          s={0.5}
        >
          <label>
            <input
              checked={false}
              className="css-homqlj-TileInput"
              name="example"
              onChange={[Function]}
              type="checkbox"
              value="c"
            />
            <span
              className="css-alzmg1-TileInput"
            >
              <span
                className="css-3s09t2-TileInput"
              >
                <span />
                <span
                  className="css-1dvl16g-TileInput"
                >
                  🙈
                </span>
                C
              </span>
            </span>
          </label>
        </div>
        <div
          className="css-10auc9b"
          l={0.5}
          m={0.5}
          s={0.5}
        >
          <label>
            <input
              checked={false}
              className="css-homqlj-TileInput"
              name="example"
              onChange={[Function]}
              type="checkbox"
              value="d"
            />
            <span
              className="css-alzmg1-TileInput"
            >
              <span
                className="css-3s09t2-TileInput"
              >
                <span />
                <span
                  className="css-1dvl16g-TileInput"
                >
                  🙈
                </span>
                D
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots Elements|TileInput Radio 1`] = `
<div
  className="css-m9xbk1"
>
  <div
    className="css-14poqco-Form"
  >
    <fieldset
      className="css-hh72o5-Fieldset"
    >
      <legend
        className="css-fodz0p-Fieldset"
      >
        Example tiles
      </legend>
      <div
        className="css-qzrkkg"
      >
        <div
          className="css-10auc9b"
          l={0.5}
          m={0.5}
          s={0.5}
        >
          <label>
            <input
              checked={false}
              className="css-707sx8-TileInput"
              name="example"
              onChange={[Function]}
              type="radio"
              value="a"
            />
            <span
              className="css-8qrdc6-TileInput"
            >
              <span
                className="css-3s09t2-TileInput"
              >
                <span />
                <span
                  className="css-1dvl16g-TileInput"
                >
                  🙈
                </span>
                A
              </span>
            </span>
          </label>
        </div>
        <div
          className="css-10auc9b"
          l={0.5}
          m={0.5}
          s={0.5}
        >
          <label>
            <input
              checked={true}
              className="css-707sx8-TileInput"
              name="example"
              onChange={[Function]}
              type="radio"
              value="b"
            />
            <span
              className="css-8qrdc6-TileInput"
            >
              <span
                className="css-3s09t2-TileInput"
              >
                <span />
                <span
                  className="css-1dvl16g-TileInput"
                >
                  🙉
                </span>
                B
              </span>
            </span>
          </label>
        </div>
        <div
          className="css-10auc9b"
          l={0.5}
          m={0.5}
          s={0.5}
        >
          <label>
            <input
              checked={false}
              className="css-707sx8-TileInput"
              name="example"
              onChange={[Function]}
              type="radio"
              value="c"
            />
            <span
              className="css-8qrdc6-TileInput"
            >
              <span
                className="css-3s09t2-TileInput"
              >
                <span />
                <span
                  className="css-1dvl16g-TileInput"
                >
                  🙈
                </span>
                C
              </span>
            </span>
          </label>
        </div>
        <div
          className="css-10auc9b"
          l={0.5}
          m={0.5}
          s={0.5}
        >
          <label>
            <input
              checked={false}
              className="css-707sx8-TileInput"
              name="example"
              onChange={[Function]}
              type="radio"
              value="d"
            />
            <span
              className="css-8qrdc6-TileInput"
            >
              <span
                className="css-3s09t2-TileInput"
              >
                <span />
                <span
                  className="css-1dvl16g-TileInput"
                >
                  🙈
                </span>
                D
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots Elements|TileInput Radio Selected 1`] = `
<div
  className="css-m9xbk1"
>
  <div
    className="css-14poqco-Form"
  >
    <fieldset
      className="css-hh72o5-Fieldset"
    >
      <legend
        className="css-fodz0p-Fieldset"
      >
        Example tiles
      </legend>
      <div
        className="css-qzrkkg"
      >
        <div
          className="css-10auc9b"
          l={0.5}
          m={0.5}
          s={0.5}
        >
          <label>
            <input
              checked={false}
              className="css-707sx8-TileInput"
              name="example"
              onChange={[Function]}
              type="radio"
              value="a"
            />
            <span
              className="css-8qrdc6-TileInput"
            >
              <span
                className="css-3s09t2-TileInput"
              >
                <span />
                <span
                  className="css-1dvl16g-TileInput"
                >
                  🙈
                </span>
                A
              </span>
            </span>
          </label>
        </div>
        <div
          className="css-10auc9b"
          l={0.5}
          m={0.5}
          s={0.5}
        >
          <label>
            <input
              checked={true}
              className="css-707sx8-TileInput"
              name="example"
              onChange={[Function]}
              type="radio"
              value="b"
            />
            <span
              className="css-8qrdc6-TileInput"
            >
              <span
                className="css-3s09t2-TileInput"
              >
                <span />
                <span
                  className="css-1dvl16g-TileInput"
                >
                  🙉
                </span>
                B
              </span>
            </span>
          </label>
        </div>
        <div
          className="css-10auc9b"
          l={0.5}
          m={0.5}
          s={0.5}
        >
          <label>
            <input
              checked={false}
              className="css-707sx8-TileInput"
              name="example"
              onChange={[Function]}
              type="radio"
              value="c"
            />
            <span
              className="css-8qrdc6-TileInput"
            >
              <span
                className="css-3s09t2-TileInput"
              >
                <span />
                <span
                  className="css-1dvl16g-TileInput"
                >
                  🙈
                </span>
                C
              </span>
            </span>
          </label>
        </div>
        <div
          className="css-10auc9b"
          l={0.5}
          m={0.5}
          s={0.5}
        >
          <label>
            <input
              checked={false}
              className="css-707sx8-TileInput"
              name="example"
              onChange={[Function]}
              type="radio"
              value="d"
            />
            <span
              className="css-8qrdc6-TileInput"
            >
              <span
                className="css-3s09t2-TileInput"
              >
                <span />
                <span
                  className="css-1dvl16g-TileInput"
                >
                  🙈
                </span>
                D
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;
